tests/examples/snapshots/fail/sorts/uncallable.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/uncallable.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: x was called but didn't take any args
  ┌─ tests/examples/fail/sorts/uncallable.fly:7:1
  │
7 │ assert forall x:s. x(true) = x
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


